# meta_saes

./: .gitignore  analyze_grid_results.py  assess_meta_sae.py  assessment.py  backfill_metrics.py  extract_metrics.py  grid_search.py  joint_threshold_assessment_results.pkl  meta_sae_extension.py  run_grid_search.sh  run_training.sh  sequential_threshold_assessment_results.pkl  similarity_analysis.py  solo_threshold_assessment_results.pkl  test_gradient_flow.py  threshold_assessment_results.pkl  train_independent_saes.py  train_meta_sae.py  training_explanation.md  training_logger.py  utils.py
BatchTopK/: activation_store.py  config.py  sae.py
BatchTopK/original_assessment_code/: auto_interp.py  blog.py  gemma_meta_sae_analysis.py  meta_sae_all_sizes.py  patrick_scratch.py  steering.py
outputs/: grid_search_analysis.csv  grid_search_analysis_all.csv  grid_search_analysis_batchtopk.csv  pareto_optimal_runs.csv  pareto_optimal_runs_batchtopk.csv
outputs/grid_search_20260116_212533/: Untitled  grid_config.json  metrics.csv  runs_manifest.json
outputs/grid_search_20260127_114026/: grid_config.json
outputs/grid_search_20260127_114221/: grid_config.json
run_scripts/: run_assessment.sh  run_grid_search.sh  run_training.sh
sae_latents_not_atomic/: .gitignore  README.md  dashboard.py  feature_statistics.py  find_structures.py  meta_sae_analysis.py  pyproject.toml  ravel.py
sae_latents_not_atomic/meta_saes/: activation_store.py  logs.py  meta_sae.py  sae.py
scratch/: analysis_scratch.py  decoder_comparison.py
(+397 files in other folders)
